--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -340,6 +339,11 @@
                         <outlet property="cardValue2" destination="x7A-FY-6mk" id="eBr-hz-kt0"/>
                         <outlet property="cardValue3" destination="PLo-EH-fFv" id="aTT-rX-Dnd"/>
                         <outlet property="cardValue4" destination="2wY-xn-fAd" id="Nht-3S-SwI"/>
+                        <outlet property="cardView0" destination="Dbq-Ca-e17" id="MYn-OX-4zT"/>
+                        <outlet property="cardView1" destination="XXT-Cb-4Il" id="niJ-DH-SCn"/>
+                        <outlet property="cardView2" destination="dqW-qe-VqJ" id="H6x-6P-Nkc"/>
+                        <outlet property="cardView3" destination="9gh-90-4Oe" id="byd-fY-6m7"/>
+                        <outlet property="cardView4" destination="tZr-uW-iTI" id="VTd-2P-e3h"/>
                         <outlet property="discard0" destination="Wz0-v5-6EX" id="86L-IQ-Gk0"/>
                         <outlet property="discard1" destination="N2d-pz-xGB" id="2lH-vg-KuZ"/>
                         <outlet property="discard2" destination="TkL-6m-OrR" id="XJA-fA-AXy"/>
